<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Modern Movers</string>
    <string name="title_activity_login" tools:ignore="MissingTranslation">LoginActivity</string>
    <string name="prompt_email" tools:ignore="MissingTranslation">Email</string>
    <string name="prompt_password" tools:ignore="MissingTranslation">Password</string>
    <string name="action_sign_in" tools:ignore="MissingTranslation">Sign in or register</string>
    <string name="action_sign_in_short" tools:ignore="MissingTranslation">Sign in</string>
    <string name="welcome" tools:ignore="MissingTranslation">"Welcome !"</string>
    <string name="invalid_username" tools:ignore="MissingTranslation">Not a valid username</string>
    <string name="invalid_password" tools:ignore="MissingTranslation">Password must be >5 characters</string>
    <string name="login_failed" tools:ignore="MissingTranslation">"Login failed"</string>
    <string name="logindes" tools:ignore="MissingTranslation">Log in using your Email \nand Password</string>
    <string name="sign_up" tools:ignore="MissingTranslation"> <u>Sign Up</u></string>
    <string name="term_note" tools:ignore="MissingTranslation">Please note that this is an hourly service, but it is common for our drivers to give a leeway of 10–15 mins, however this issolely at the drivers discretion</string>
    <string name="dismantling" tools:ignore="MissingTranslation">Any dismantling or assembling? (Y/N)</string>
    <string name="google_map_key" translatable="false">AIzaSyAVGqg6utoXhEejF1ZFo-hvKEInA8KbcO8</string>
    <string name="copy_to_clipboard" translatable="false"><u>Copy to Clipboard</u></string>
    <string name="parking_string" tools:ignore="MissingTranslation">Please ensure that you have provided a suitable parking space for the van as you will be held responsible for any parking tickets during the removals</string>
    <string name="toll_tax" tools:ignore="MissingTranslation">You will also be charged for any traffic tolls (such as congestion/ ULEZ or any clean air charges) incurred during the removals</string>
    <string name="resend_email" tools:ignore="MissingTranslation">Resend Email</string>
    <string name="booked_by" tools:ignore="MissingTranslation">Booked By</string>
    <string name="date" tools:ignore="MissingTranslation">Date</string>
    <string name="expenses" tools:ignore="MissingTranslation">Expenses</string>
    <string name="monthly" tools:ignore="MissingTranslation">Monthly</string>
    <string name="weekly" tools:ignore="MissingTranslation">Weekly</string>
    <string name="today" tools:ignore="MissingTranslation">Today</string>
    <string name="yearly" tools:ignore="MissingTranslation">Yearly</string>
    <string name="_300" tools:ignore="MissingTranslation">£300</string>
    <string name="statics" tools:ignore="MissingTranslation">Statistics</string>
    <string name="title_activity_driver_dashboard" tools:ignore="MissingTranslation">DriverDashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" tools:ignore="MissingTranslation">First Fragment</string>
    <string name="second_fragment_label" tools:ignore="MissingTranslation">Second Fragment</string>
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="previous" tools:ignore="MissingTranslation">Previous</string>
    <string name="hello_first_fragment" tools:ignore="MissingTranslation">Hello first fragment</string>
    <string name="hello_second_fragment" tools:ignore="MissingTranslation">Hello second fragment. Arg: %1$s</string>
    <string name="warning" tools:ignore="MissingTranslation">"The following item/items cannot be removed safely as it may cause damage to your property or item. If you instruct us to continue with the removal of these items you you understand that we will not be held responsible for any damage/liabality.  "</string>


</resources>