<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlStatics"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/blue"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/blue"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/statics"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxWidth="@dimen/_55sdp"
            android:maxHeight="@dimen/_51sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            android:visibility="visible" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@id/rlHeader"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".01"
                android:background="#D9D9D9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeekly"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/weekly"
                android:textColor="@color/cusCol"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".01"
                android:background="#D9D9D9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMonth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/monthly"
                android:textColor="@color/cusCol"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".01"
                android:background="#D9D9D9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/yearly"
                android:textColor="@color/cusCol"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvMain"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvPhoneTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_5sdp"
                android:text="Rides"
                android:textColor="@color/locationCol"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtRides"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/_300"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_5sdp"
                android:text="Earnings"
                android:textColor="@color/locationCol"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtEarning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/_300"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_5sdp"
                android:text="Hours"
                android:textColor="@color/locationCol"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtHours"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/_300"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_5sdp"
                android:text="Profit"
                android:textColor="@color/locationCol"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtProfit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/_300"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_5sdp"
                android:text="Loss"
                android:textColor="@color/locationCol"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtLoss"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/_300"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_30sdp"-->
        <!--            android:layout_marginHorizontal="@dimen/_25sdp"-->
        <!--            android:layout_marginTop="@dimen/_5sdp"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:weightSum="1">-->

        <!--            <TextView-->

        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:gravity="center_vertical"-->
        <!--                android:paddingStart="@dimen/_5sdp"-->
        <!--                android:text="Advertising"-->
        <!--                android:textColor="@color/locationCol"-->
        <!--                android:textSize="@dimen/_14sdp"-->
        <!--                tools:ignore="RtlSymmetry" />-->

        <!--            <TextView-->

        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:ellipsize="marquee"-->
        <!--                android:fontFamily="@font/opensans_semi_bold"-->
        <!--                android:gravity="end|center"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/_300"-->
        <!--                android:textColor="@color/textColor"-->
        <!--                android:textSize="@dimen/_14sdp" />-->

        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->

        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_30sdp"-->
        <!--            android:layout_marginHorizontal="@dimen/_25sdp"-->
        <!--            android:layout_marginTop="@dimen/_5sdp"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:weightSum="1">-->

        <!--            <TextView-->

        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:gravity="center_vertical"-->
        <!--                android:paddingStart="@dimen/_5sdp"-->
        <!--                android:text="Equipment"-->
        <!--                android:textColor="@color/locationCol"-->
        <!--                android:textSize="@dimen/_14sdp"-->
        <!--                tools:ignore="RtlSymmetry" />-->

        <!--            <TextView-->

        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:ellipsize="marquee"-->
        <!--                android:fontFamily="@font/opensans_semi_bold"-->
        <!--                android:gravity="end|center"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/_300"-->
        <!--                android:textColor="@color/textColor"-->
        <!--                android:textSize="@dimen/_14sdp" />-->

        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->

        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_30sdp"-->
        <!--            android:layout_marginHorizontal="@dimen/_25sdp"-->
        <!--            android:layout_marginTop="@dimen/_5sdp"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:weightSum="1">-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:gravity="center_vertical"-->
        <!--                android:paddingStart="@dimen/_5sdp"-->
        <!--                android:text="Other"-->
        <!--                android:textColor="@color/locationCol"-->
        <!--                android:textSize="@dimen/_14sdp"-->
        <!--                tools:ignore="RtlSymmetry" />-->

        <!--            <TextView-->

        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight=".5"-->
        <!--                android:ellipsize="marquee"-->
        <!--                android:fontFamily="@font/opensans_semi_bold"-->
        <!--                android:gravity="end|center"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/_300"-->
        <!--                android:textColor="@color/textColor"-->
        <!--                android:textSize="@dimen/_14sdp" />-->

        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>